Detail View & Service

--- a/TheMovieDB/Utils/Localizables/Localizable.strings
+++ b/TheMovieDB/Utils/Localizables/Localizable.strings
@@ -29,3 +29,7 @@
 "movieList.movieListType.topRated" = "Más valoradas";
 
 "movieList.movieListType.upcoming" = "Próximas";
+
+// MARK:  Movie Detail
+
+"movieDetail.title" = "Detalle de Películas";
